<resources>
    <string name="app_name">FindAppointment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Guest User</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>

    <!-- API -->
    <string name="mapbox_access_token">pk.eyJ1IjoidGFuaWEzMTQ1IiwiYSI6ImNsMTZtYnJpODB2OTQzYnNnc2ZlZXYycHoifQ.82MoS_F5__4_9PcZ5h-39g</string>

    <!-- Custom strings -->
    <string name="app_tag">FindAppointment</string>
    <string name="menu_appointments">Appointments</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_help_feedback"><![CDATA[Help & Feedback]]></string>
    <string name="menu_account">Account</string>
    <string name="menu_login">Login</string>
    <string name="login_button_text">Login</string>
    <string name="register_header">Register</string>
    <string name="register_button_text">Register</string>
    <string name="email_field_text">Email</string>
    <string name="password_field_text">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_business_question">Would you like to add a business?</string>
    <string name="no_button_choice">No</string>
    <string name="yes_button_choice">Yes</string>
    <string name="first_name_field_text">First Name</string>
    <string name="last_name_field_text">Last Name</string>
    <string name="confirm_password_field_text">Confirm Password</string>
    <string name="menu_register">Register</string>
    <string name="business_submit_button">Add business</string>
    <string name="contact">Contact</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="make_appointment_button">MAKE APPOINTMENT</string>
    <string name="create_business">Add Business</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="business_page">Business</string>
    <string name="view_business">VIEW BUSINESS</string>
    <string name="make_appointment">Make Appointment</string>
</resources>